<resources>
    <string name="app_name">Memo Apps</string>
    <string name="profile">Profile</string>
    <string name="note">Notes</string>
    <string name="info">Info</string>
    <string name="nama">Nama: Vania Yulianti Mozef</string>
    <string name="email">Email: vaniamzf@gmail.com</string>
    <string name="kelas">Kelas: IF-9</string>
    <string name="nim">NIM: 10118363</string>
    <string name="txt_welcome">Welcome to Memo </string>
    <string name="txt_intro">An App To Organize Your Daily Notes</string>
    <string name="page1">Page 1 of 2</string>
    <string name="page2">Page 2 of 2</string>
    <string name="page3">Page 3 of 3</string>
    <string name="memo">Say hi to your first memo</string>
    <string name="penjelasan">  First, go to the Notes tab and click + to start writing your diary</string>
    <string name="txt_add">Add Notes</string>
</resources>